[tool.poetry]
name = "cuepyd"
version = "0.1.0"
description = ""
authors = ["Alex de Oliveira <orpharion@orpharion.net>"]
license = "Apache License 2.0"

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
